@startuml
skinparam classAttributeIconSize 0
title Logical / Class View - CJ Secure

package "controllers" {
  class LoginController
  class RecordController
  class AdminController
}

package "services" {
  class AuthService
  class RecordService
  class MFAService
  class AccessControlService
  class AuditLogger
}

package "repositories" {
  class UserRepository
  class RecordRepository
  class AuditRepository
}

package "models" {
  class User
  class Record
  class SecurityEvent
}

package "security" {
  abstract class MFAStrategy
  class EmailOTPStrategy
  class TOTPStrategy
  class MFAFactory
  class PasswordHasher
  class SensitiveDataMasker
  class Tokenizer
}

LoginController --> AuthService
RecordController --> RecordService
RecordController --> UserRepository
RecordController --> AccessControlService
RecordController --> AuditLogger
AdminController --> UserRepository
AdminController --> AccessControlService
AdminController --> AuditLogger

AuthService --> UserRepository
AuthService --> PasswordHasher
AuthService --> MFAService
AuthService --> AuditLogger

MFAService --> MFAFactory
MFAFactory --> MFAStrategy
MFAStrategy <|-- EmailOTPStrategy
MFAStrategy <|-- TOTPStrategy

RecordService --> RecordRepository
RecordService --> AccessControlService
RecordService --> AuditLogger
RecordService --> SensitiveDataMasker
RecordService --> Tokenizer

AuditLogger --> AuditRepository
AuditRepository --> SecurityEvent
UserRepository --> User
RecordRepository --> Record
@enduml